# h4kshot

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
src/h4kshot/: __init__.py  app.py  clipboard.py  config.py  daemon.py  overlay.py  recorder.py  screenshot.py  tray.py  uploader.py
tests/: test_clipboard.py  test_config.py  test_daemon.py  test_overlay.py  test_recorder.py  test_screenshot.py  test_tray.py  test_uploader.py
